<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OnTimeSubway</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_left_collect">收藏</string>
    <string name="cancelCollect">取消收藏</string>
    <string name="title_center_app">准点地铁</string>
    <string name="title_center_collect">我的收藏</string>
    <string name="title_right_reminder">提醒</string>
    <string name="back">返回</string>
    <string name="title_activity_collect_cneter">CollectCneterActivity</string>
    <string name="title_activity_station_center">StationCenter</string>
    <string name="st_real">实时屏显</string>
    <string name="st_map">地铁平面图</string>
    <string name="st_selectEnd">选择终点</string>
    <string name="real_first">第一趟</string>
    <string name="real_second">第二趟</string>
    <string name="real_third">第三趟</string>
    <string name="title_activity_remind_center">RemindCenter</string>
    <string name="remind_center_now_location">现在的位置</string>
    <string name="remind_center_selected_route">选择路线</string>
    <string name="remind_center_selected_station">选择站点</string>
    <string name="remind_center_selected_direction">选择方向</string>
    <string name="remind_center_end_location">终点</string>
    <string name="ok">确定</string>
    <string name="map_text">地图</string>
    <string name="enter">进入</string>
    <string name="line">号线</string>
    <string name="loadtext">玩命加载中...</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="remind_center_title_center">设置提醒</string>
    <string name="delete">删除</string>
    <string name="title_activity_select_station_part">SelectStationPart</string>
    <string name="title_activity_select_item">SelectItem</string>
    <string name="addTomenu">加入菜单</string>
	<string name="removeFrommenu">移除菜单</string>
</resources>
