<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/titleRelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" 
    android:background="@color/grey"
    >

    <Button
        android:id="@+id/title_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"     
        android:layout_marginLeft="2dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:text="@string/title_left_collect" 
        android:background="@drawable/titlebutton"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/title_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/title_center_app" 
        android:textColor="@color/ivory"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/title_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="2dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_alignParentRight="true"
        android:text="@string/title_right_reminder"
        android:background="@drawable/titlebutton"
        android:textColor="@color/white" />

</RelativeLayout>
