<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".StationCenter" >

    <LinearLayout
        android:id="@+id/stationtitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/st_1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/st_real"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/circularbuttonef" />

        <TextView
            android:id="@+id/st_2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/st_map"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/circularbuttonef" />

        <TextView
            android:id="@+id/st_3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
           	android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/st_selectEnd"
            android:textColor="@color/white"
            android:background="@drawable/circularbuttonef" />
    
    </LinearLayout>"
  

   <RelativeLayout
        android:id="@+id/stationCenterVP"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/stationtitle"
        />

</RelativeLayout>