<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RemindCenter" >

    <RelativeLayout
        android:id="@+id/rc_start_location"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp" >

        <TextView
            android:id="@+id/rc_now_location_textview"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/remind_center_now_location" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/rc_now_location_textview"
            android:gravity="center" >

            <TextView
                android:id="@+id/rc_selected_route_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind_center_selected_route" />

            <Spinner
                android:id="@+id/rc_selected_start_route_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/rc_now_location_textview"
            android:gravity="center" >

            <TextView
                android:id="@+id/rc_select_station_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind_center_selected_station" />

            <Spinner
                android:id="@+id/rc_selected_start_station_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/rc_now_location_textview"
            android:gravity="center" >

            <TextView
                android:id="@+id/rc_select_direction_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind_center_selected_direction" />

            <Spinner
                android:id="@+id/rc_selected_start_direction_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rc_end_location"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rc_start_location"
        android:layout_margin="10dp" >

        <TextView
            android:id="@+id/rc_selected_end_textview"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/remind_center_end_location" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/rc_selected_end_textview"
            android:gravity="center" >

            <TextView
                android:id="@+id/rc_select_end_route_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind_center_selected_route" />

            <Spinner
                android:id="@+id/rc_selected_end_route_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/rc_selected_end_textview"
            android:gravity="center" >

            <TextView
                android:id="@+id/rc_select_end_station_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind_center_selected_station" />

            <Spinner
                android:id="@+id/rc_selected_end_station_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/rc_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rc_end_location"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circularbutton"
        android:text="@string/ok" />

</RelativeLayout>